
This file is in Unicode charset with UTF-8 encoding.

(The `lines' figures total .c, .h, .l, and .y files under version control.
Abbreviations in parentheses are the maintainers who committed the respective
change.  MA = Matthias Andree, ESR = Eric S. Raymond, RF = Rob Funk.)

fetchmail 6.4.0 (not yet released):

# MAJOR INCOMPATIBLE CHANGES
* Support for POP2 was removed.  Matthias Andree.

# OTHER CHANGES
* RFC-2060 -> RFC-3501.  Sunil Shetye.
* When storing flags, use +FLAGS.SILENT on IMAP4rev1, too, not just IMAP4.
  6.3.X had falsely assumed only IMAP4 supported SILENT.  Sunil Shetye.

fetchmail 6.3.1 (not yet released):

* Fix broken default port in POP2. Patch by Stanislav Brabec, SUSE [CZ]. (MA)
* Fix manual page, some lines starting with ' were escaped by \&. (MA)
* Ship with gettext-0.14.3 again, as 6.2.9-rc10 did. Found by Sunil Shetye. (MA)
* Actually set default SSL certificate path if --sslcertpath is unset.
  Reported by Heino Tiedemann and Rob MacGregor. (MA)
* Remove bogus Netscape IMAP4rev1 Service >= 3.6 warning about BODY[TEXT]
  that we are not using. Patch by Sunil Shetye. (MA)

fetchmail 6.3.0 (released 2005-11-30):

# SECURITY FIXES IN THIS RELEASE
* CVE-2005-2335: The POP3 UIDL code doesn't sufficiently validate/truncate the
  input length, so a (malicious or compromised) server that sends UIDs longer
  than 128 bytes can corrupt fetchmail's stack and crash fetchmail.
  This vulnerability is remotely exploitable to inject code run in a
  root shell. Edward J. Shornock, Ludwig Nussel. fetchmail-SA-2005-01.txt
* CVE-2005-3088: fetchmailconf now changes the output file to mode 0600 BEFORE
  writing to it, so there is no window where passwords could be read by the
  world. Matthias Andree. fetchmail-SA-2005-02.txt

# MAJOR INCOMPATIBLE CHANGES
* Remove support for --netsec/-T options, the required inet6_apps library is no
  longer available.
  http://www.inner.net/pub/ipv6/ states, as of 2005-07-03: "/pub/ipv6